# MFCDemo

./: .gitignore  NetDrv.inf  build_all.cmd
.github/skills/network-ark/: SKILL.md
ArkApp/: ArkApp.cpp  ArkApp.h  ArkApp.rc  ArkApp.vcxproj  ArkDlg.cpp  ArkDlg.h  ArkUdp.cpp  ArkUdp.h  ProcEnrich.cpp  ProcEnrich.h  resource.h  stdafx.h
NetDrv/: CompatPool.h  Driver.c  EnumArk.c  EnumArk.h  Ioctl.h  KernelCxx.cpp  NetControl.c  NetControl.h  NetDrv.inf  NetDrv.vcxproj  NetLink.cpp  NetLink.h  NetLinkApi.h  README.md  ScreenShot.c  ScreenShot.h  ShellcodeGdi.c  ShellcodeGdiBytes.h  TcpChannel.c  TcpChannel.h  TcpLink.c  TcpLink.h  Wsk.c  Wsk.h
QtApp/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  NetLinkBase.cpp  NetLinkBase.h  TcpChannel.cpp  TcpChannel.h  TcpLink.cpp  TcpLink.h  UdpLink.cpp  UdpLink.h  main.cpp
Shared/: NdarkLog.h  Protocol.h  ProtocolRoute.h
docs/: network-architecture.md
scripts/: check-driver-imports.ps1  verify-connectivity.ps1  vm-setup-network.ps1
tests/: test-log.js
